# tensorgrad

./: .gitignore  CHANGELOG.md  CNAME  README.md  benchmark_numpy_optimization.py  build_docker_image.sh  functions.py  html  index.html  main.py  out  playground.html  pyproject.toml  pyrightconfig.json  requirements.txt  shared.js  styles.css  tensor.py  test_debug.py  test_expectation_bugs.py  test_numpy_optimization.py  test_tensor.py
.githooks/: pre-commit
.github/workflows/: build-docs.yaml  build-lambda.yaml  pypi.yaml  python-tests.yml
benchmarks/: conv_step.py  diffusion_step.py  embed_step.py  gp_step.py  gpt_cells_step.py  gpt_step.py  hessian_step.py  mlp_cells_step.py  mlp_step.py  newton_step.py  rnn_step.py  run.py  second_order.py  second_order_jax.py  second_order_scale.py  shampoo_kfac.py  vae_step.py
docker/: Dockerfile  drawTensors.py  index.html  pyproject.toml
docker/tests/: pytest.ini  test_app.py  test_docker.py  test_docker_debug.py  test_docker_quick.py
docs/: compiler.md  guide.html  index.html
docs/api/: functions.html  imgtools.html  index.html  search.js  tensor.html  tensorgrad.html  testutils.html  utils.html
docs/api/extras/: expectation.html  index.html
docs/api/serializers/: index.html  to_d3.html  to_formula.html  to_graphviz.html  to_manim.html  to_pytorch.html  to_tikz.html
docs/api/tensorgrad/: autodiff.html  canon.html  compiler.html  dependson.html  extras.html  fingerprint.html  functions.html  grad.html  imgtools.html  simplify.html  structure.html  substitute.html  tensor.html  testutils.html  typing.html  utils.html
docs/api/tensorgrad/extras/: _convolution.html  book_layout.html  correspond.html  diagram_browser.html  diagram_layout.html  diagram_manim.html  evaluate.html  expectation.html  polynomials.html  to_diagram.html  to_formula_old.html  to_index.html  to_latex.html  to_numpy.html  to_numpy_optimized.html  to_pytorch.html  to_tikz.html
docs/tensorgrad/: testutils.html
docs/tensorgrad/extras/: evaluate.html  expectation.html  to_formula_old.html  to_latex.html  to_numpy.html  to_tikz.html
examples/: diffusion.py  gp.py  main.py  mingpt.py  mlp.py  mlp_pytorch_baseline.py  mnist.py  newton.py  vae.py
notebooks/: derivatives.ipynb
paper/: audit_notes.md  cookbook.aux  cookbook.tex  cookbook.toc  main.tex  references.bib  tn_approaches.tex  tn_stress.tex
paper/animations/: MANIM_BACKEND_PLAN.md  SKILL.md  advanced_rules.py  trace_cyclic.py
paper/book_layout_samples/: .gitignore  examples_main.py  generate.py
paper/chapters/: advanced_derivatives.tex  appendix.tex  decompositions.tex  determinant.tex  functions.tex  intro.tex  kronecker.tex  ml.tex  simple_derivatives.tex  special_matrices.tex  statistics.tex  tensor_algos.tex  tensor_trains.tex  tensorgrad.tex  tikz-macros.tex  tikz-styles.tex
paper/figures/: Y.pdf_tex  basic_graph.pdf_tex  chain_rule_broadcast.pdf_tex  contraction_1.tex  contraction_2.tex  dTdU.pdf_tex  kron.pdf_tex  linearityOfExpectation.pdf_tex  linearityOfExpectations  linearityOfExpectations.pdf_tex  linearityOfExpectations_tex  moment_tensors.pdf_tex  path1.pdf_tex  path2.pdf_tex  path3.pdf_tex  path8.pdf_tex  power.pdf_tex  product.pdf_tex  steins.pdf_tex
paper/pldi/: main.tex  references.bib
scripts/: analyze_profile.py  benchmark.py  benchmark_to_numpy.py  profile.py  profile_ops.py  profile_test.py  simple_benchmark.py
serializers/: to_d3.py  to_graphviz.py  to_manim.py  to_pytorch.py  to_tikz.py
server/: Dockerfile  __init__.py  index.html  pyproject.toml
server/tests/: test_app.py  test_docker.py  test_docker_debug.py  test_docker_quick.py
tensorgrad/: __init__.py  canon.py  dependson.py  fingerprint.py  functions.py  grad.py  imgtools.py  random_tree.py  simplify.py  structure.py  substitute.py  tensor.py  testutils.py  to_formula.py  typing.py  utils.py
tensorgrad/compiler/: __init__.py  adjoint.py  affine.py  canon.py  cells.py  codegen_torch.py  consolidate.py  egraph.py  factor.py  fold.py  gather.py  gemm_batch.py  ir.py  layout.py  lower.py  peepholes.py  reverse.py  runtime.py  stabilize.py  szfp.py  zerograd.py
tensorgrad/extras/: __init__.py  _convolution.py  book_layout.py  correspond.py  diagram_browser.py  diagram_layout.py  diagram_manim.py  evaluate.py  expectation.py  polynomials.py  to_diagram.py  to_formula_old.py  to_index.py  to_latex.py  to_numpy.py  to_numpy_optimization_notes.md  to_numpy_optimized.py  to_pytorch.py  to_tikz.py
tensorgrad/serializers/: to_d3.py  to_graphviz.py  to_latex.py  to_manim.py  to_pytorch.py  to_pytorch2.py  to_tikz.py
tests/: test_canon_integration.py  test_child_accessor_contracts.py  test_concat_window.py  test_confluence.py  test_constraints.py  test_evaluate.py  test_expectation.py  test_functions.py  test_gelu_fused.py  test_grads.py  test_graph.py  test_isomorphism.py  test_jacobians.py  test_layer_norm.py  test_matrix_calc.py  test_ml.py  test_one_hot_rules.py  test_powers.py  test_product.py  test_rename.py  test_sdpa.py  test_second_order.py  test_semantic_cancellation.py  test_simplify.py  test_simplify_memo.py  test_sort.py  test_tensor.py  test_tikz.py  test_to_code.py  test_to_latex.py  test_typing.py  test_variable.py  utils.py
tests/compiler/: test_affine.py  test_affine_closure.py  test_affine_range.py  test_api.py  test_canon.py  test_compiler.py  test_consolidate.py  test_egglog_stage2.py  test_egraph_stage.py  test_factor.py  test_fold.py  test_foreach.py  test_gather.py  test_gather_pass.py  test_gemm_batch.py  test_hvp_depth.py  test_inverse_cell.py  test_kernels.py  test_layout.py  test_linalg_peepholes.py  test_pass_gates.py  test_researcher_benchmark.py  test_reverse_grads.py  test_reverse_mode.py  test_softmax_fused.py  test_softplus_cell.py  test_stabilize.py  test_stabilize_orphan.py  test_szfp.py  test_zerograd.py
tests/extras/: test_book_layout.py  test_correspond.py  test_evaluate.py  test_expectation.py  test_expectation_std.py  test_polynomials.py  test_to_diagram.py  test_to_index.py  test_to_numpy_optimized.py  test_to_pytorch.py
