[project]
name = "tensorgrad"
version = "0.3.0"
# Runtime deps of the library itself. Everything the tensorgrad package
# actually imports -- nothing more. (The web server declares its own deps in
# server/pyproject.toml; examples/tests deps live in the extra and dev group
# below.)
dependencies = [
   "networkx==3.2.1",
   "numpy",
   "torch",
   "sympy",
   "opt_einsum",
   "pdf2image", # diagram rendering (tensorgrad.imgtools); needs system poppler
   "egglog>=11.4.0",
]
requires-python = ">=3.10"
authors = [
  {name = "Thomas Ahle", email = "lobais@gmail.com"},
]
description = "Tensor Network Library with Symbolic Autograd"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["tensors", "autograd"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
# `pip install tensorgrad[examples]` to run examples/.
examples = [
   "torchvision>=0.22.0",
   "tqdm>=4.67.1",
   "scikit-learn>=1.7.2",
]

[project.urls]
Homepage = "https://tensorcookbook.com"
Repository = "https://github.com/thomasahle/tensorgrad.git"
Issues = "https://github.com/thomasahle/tensorgrad/issues"

[build-system]
requires = [
   "setuptools",
   "wheel"
]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
# Only ship the library itself. Without this, discovery sweeps in the
# repo's top-level tests/examples/server/paper/benchmarks/scripts dirs as
# importable packages (they polluted the 0.2.1 wheel).
include = ["tensorgrad*"]

[tool.ruff]
line-length = 110
indent-width = 4

[tool.mypy]
# Enable/disable type checking options
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
# Allow reusing a variable name for a value of a different type (loop-variable
# overwrite, double assignment, reassigning a narrow result to a wider type),
# so idiomatic Python doesn't need a `x: Type = ...` annotation at every reuse.
allow_redefinition = true
exclude = "tests/"

# Third-party libraries that ship no type stubs / py.typed marker.
[[tool.mypy.overrides]]
module = ["networkx.*", "sympy.*", "opt_einsum.*", "manim.*"]
ignore_missing_imports = true

# Remaining typing debt, exempted so `mypy tensorgrad/` gates everything else
# (CI runs it). Remove entries as the files get cleaned.
[[tool.mypy.overrides]]
module = ["tensorgrad.compiler.codegen_torch"]
ignore_errors = true


[tool.pytest.ini_options]
# Put the repo root on sys.path so tests can cross-import helpers
# (`from tests.compiler.test_compiler import ...`). Previously this worked
# only because packaging accidentally installed `tests` as a top-level
# package; it no longer ships, so make the test path explicit here instead.
pythonpath = ["."]
# addopts = "-s"
# addopts = "--nbval"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest",
    "einops",  # used only by tests/extras
]

